mongodb/mongodb-headless-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: mongo-set
  labels:
    name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    role: mongo
