mongodb/mongodb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mongo-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - mongo.ostrike.com
  rules:
  - host: mongo.ostrike.com
    http:
      paths:
      - backend:
          serviceName: mongo-service
          servicePort: 27017
